<resources>
    <string name="app_name">MorzeLearn</string>
    <string name="TranslateTo">Перевод в азбуку Морзе.</string>
    <string name="ChooseGamemode">Выберите режим игры.</string>
    <string name="ChooseRightPic">Выбор правильной картинки.</string>
    <string name="TranslateFrom">Перевод из азбуки Морзе.</string>
    <string name="StartTranslate">Начать!</string>
    <string name="lvl1">Уровень 1.</string>
    <string name="lvl2">Уровень 2.</string>
    <string name="lvl3">Уровень 3.</string>
    <string name="IDesc">Картинка задания</string>
    <string name="Gamemode3">Переведите код Морзе.</string>
    <string name="Congrats">Вы прошли все уровни из данной категории.</string>
    <string name="Right">Правильно </string>
    <string name="outof"> из 3</string>
    <string name="comeback">Вернуться</string>
    <string name="Gamemode1">Что изображено на картинке? Напишите, используя азбуку Морзе.</string>
    <string name="Gamemode2">Расшифруйте и выберите подходящую картинку.</string>
    <string name="lvl2_1">•−• •• •••</string>
    <string name="lvl2_2">−•− −−− ••• −− −−− •••</string>
    <string name="lvl2_3">••−•• −• • •−• −−• •• •−•−</string>
    <string name="Dot">•</string>
    <string name="lvl3_1">планета</string>
    <string name="lvl3_1anw">•−−• •−•• •− −• • − •−</string>
    <string name="lvl3_2">землетрясение</string>
    <string name="lvl3_2anw">−−•• • −− •−•• • − •−• •−•− ••• • −• •• •</string>
    <string name="lvl3_3">ракета</string>
    <string name="lvl3_3anw">•−• •− −•− • − •−</string>
    <string name="Tire">−</string>
    <string name="SpaceBarIcon">␣</string>
    <string name="Hint">Ответ</string>
    <string name="ans">ans</string>
    <string name="BackspaceIcon">←</string>
    <string name="Nextlvl">Следующий уровень.</string>
    <string name="Answer1_1">•−•− −••• •−•• −−− −•− −−−</string>
    <string name="Answer1_2">•−− −−− −•• •−</string>
    <string name="Answer1_3">−•− −−− •−• •− −••• •−•• −••−</string>
    <string name="error_text">Вспышка камеры недоступна!</string>
    <string name="error_title">Ошибка! Нет вспышки!</string>
    <string name="exit_message">Назад</string>
</resources>
